<resources>
    <string name="app_name">Тест-опросник Шмишека и Леонгарда</string>
    <string name="test_name">Тест-опросник Шмишека и Леонгарда</string>
    <string name="test_description">
        Предлагаем пройти тест на акцентуацию характера, или опросник Шмишека, и узнать, какие типы акцентуации выражены у вас наиболее ярко.
        Как и следует из названия теста, опросник был разработан Шмишеком на основе выделенных Леонгардом доминирующих черт характера при том или ином типе.
        Данный тест на акцентуацию состоит из 88 вопросов, касающихся 10 типов акцентуаций.
    </string>
    <string name="instruction">
        Вам будут предложены утверждения, касающиеся вашего характера.
        Отвечайте, долго не  раздумывая, вы можете выбрать один их двух ответов: «да» или «нет», других вариантов ответов  нет.
        На свой ответ нужно нажать, после чего у Вас появится кнопка перехода на следующий вопрос
    </string>
    <string name="noAccount">У Вас нет аккаунта?</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="email">Email *</string>
    <string name="password">Пароль *</string>
    <string name="new_password">Новый пароль</string>
    <string name="password_repeat">Повторите пароль *</string>
    <string name="new_password_repeat">Повторите новый пароль</string>
    <string name="name">Фамилия и имя:</string>
    <string name="first_name">Имя и фамилия*</string>
    <string name="birtday">Дата рождения *</string>
    <string name="gender">Пол </string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="email_v2">Email:</string>
    <string name="birtday_v2">Дата рождения:</string>
    <string name="gender_v2">Пол:</string>
    <string name="old_pass">Для изменения введите старый пароль</string>
    <string name="email_forgot_pass">Введите email и мы вышлем новый пароль на Вашу почту</string>

    <string name="login">Войти</string>
    <string name="logout">Выйти</string>
    <string name="stat">Статистика</string>
    <string name="reset_password">Восстановление пароля</string>
    <string name="registration">Регистрация</string>
    <string name="edit">Редактировать</string>
    <string name="go_test">Начать тест</string>
    <string name="personal">Личный кабинет</string>
    <string name="register">Зарегистрироваться</string>
    <string name="save">Сохранить</string>
    <string name="send">Выслать новый пароль</string>

    <string name="statistic">Статистика</string>
    <string name="authorisation">Вход</string>
    <string name="test_desc_header">Описание теста</string>
    <string name="edit_profile">Редактирование профиля</string>


    <string name="delimiter">*****************************************</string>
    <string name="testResults">Результаты теста</string>
    <string name="typesDescription">Описание психотипов</string>
    <string name="demonstrative">1. Демонстративный тип. Характеризуется повышенной способностью к вытеснению, демонстративностью поведения, живостью, подвижностью, легкостью в установлении контактов. Склонен к фантазерству, лживости и притворству, направленным на приукрашивание своей персоны, авантюризму, артистизму, к позерству. Им движет стремление к лидерству, потребность в признании, жажда постоянного внимания к своей персоне, жажда власти, похвалы; перспектива быть незамеченным отягощает его. </string>
    <string name="stuck">2. Застревающий тип. Его характеризует умеренная общительность, занудливость, склонность к нравоучениям, неразговорчивость. Часто страдает от мнимой несправедливости по отношению к нему. В связи с этим проявляет настороженность и недоверчивость по отношению к людям, чувствителен к обидам и огорчениям, уязвим, подозрителен, отличается мстительностью, долго переживает происшедшее, не способен «легко отходить» от обид. </string>
    <string name="pedantic">3. Педантичный тип. Характеризуется ригидностью, инертностью психических процессов, тяжелостью на подъем, долгим переживанием травмирующих событий. В конфликты вступает редко, выступая скорее пассивной, чем активной стороной. В то же время очень сильно реагирует на любое проявление нарушения порядка. На службе ведет себя как бюрократ, предъявляя окружающим много формальных требований.</string>
    <string name="excitable">4. Возбудимый тип. Недостаточная управляемость, ослабление контроля над влечениями и побуждениями сочетаются у людей такого типа с властью физиологических влечений. Ему характерна повышенная импульсивность, инстинктивность, грубость, занудство, угрюмость, гневливость, склонность к хамству и брани, к трениям и конфликтам, в которых сам и является активной, провоцирующей стороной.</string>
    <string name="hyperthymic">5. Гипертимический тип. Людей этого типа отличает большая подвижность, общительность, болтливость, выраженность жестов, мимики, пантомимики, чрезмерная самостоятельность, склонность к озорству, недостаток чувства дистанции в отношениях с другими. Часто спонтанно отклоняются от первоначальной темы в разговоре. Везде вносят много шума, любят компании сверстников, стремятся ими командовать. Они почти всегда имеют очень хорошее настроение, хорошее самочувствие, высокий жизненный тонус, нередко цветущий вид, хороший аппетит, здоровый сон, склонность к чревоугодию и иным радостям жизни.</string>
    <string name="disthymic">6. Дистимический тип. Люди этого типа отличаются серьезностью, даже подавленностью настроения, медлительностью, слабостью волевых усилий. Для них характерны пессимистическое отношение к будущему, заниженная самооценка, а также низкая контактность, немногословность в беседе, даже молчаливость.</string>
    <string name="anxiouslyFearFull">7. Тревожный тип. Людям данного типа свойственны низкая контактность, минорное настроение, робость, пугливость, неуверенность в себе. Дети тревожного типа часто боятся темноты, животных, страшатся оставаться одни. Они сторонятся шумных и бойких сверстников, не любят чрезмерно шумных игр, испытывают чувство робости и застенчивости, тяжело переживают контрольные, экзамены, проверки. Часто стесняются отвечать перед классом. Охотно подчиняются опеке старших, нотации взрослых могут вызвать у них угрызения совести, чувство вины, слезы, отчаяние.</string>
    <string name="emotionally">8. Циклотимный тип. Характеризуется сменой гипертимных и дистимных состояний. Им свойственны частые периодические смены настроения, а также зависимость от внешних событий. Радостные события вызывают у них картины гипертимии: жажда деятельности, повышенная говорливость, скачка идей; печальные – подавленность, замедленность реакций и мышления, так же часто меняется их манера общения с окружающими людьми. В подростковом возрасте можно обнаружить два варианта циклотимической акцентуации: типичные и лабильные циклоиды.</string>
    <string name="emotive">9. Экзальтированный тип. Яркая черта этого типа – способность восторгаться, восхищаться, а также – улыбчивость, ощущение счастья, радости, наслаждения. Эти чувства у них могут часто возникать по причине, которая у других не вызывает большого подъема, они легко приходят в восторг от радостных событий и в полное отчаяние – от печальных. Им свойственна высокая контактность, словоохотливость, влюбчивость.</string>
    <string name="cyclothymic">10. Эмотивный тип. Этот тип родственен экзальтированному, но проявления его не столь бурны. Для них характерны эмоциональность, чувствительность, тревожность, болтливость, боязливость, глубокие реакции в области тонких чувств. Наиболее сильно выраженная черта – гуманность, сопереживание другим людям или животным, отзывчивость, мягкосердечность, сорадование чужим успехам. </string>
</resources>