<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white">
    <ImageView android:id="@+id/goBack"
        android:layout_width="70px"
        android:layout_height="70px"
        android:src="@drawable/arrow"
        android:layout_marginTop="30px"
        android:layout_marginLeft="40px"
        android:layout_marginBottom="20px"
        android:layout_gravity="left"/>
    <TextView
        android:id="@+id/testName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:textSize="100px"
        android:text="@string/edit_profile"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/mainGreen"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textEmailAddress"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:layout_marginBottom="20px"
        android:background="@drawable/edit_text_border"/>
    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/first_name"
        android:textColorHint="@color/mainGreen"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textEmailAddress"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:layout_marginBottom="20px"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/birthdayInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:ems="10"
        android:textColorHint="@color/mainGreen"
        android:hint="@string/birtday"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="date"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:layout_marginBottom="20px"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="80px"
        android:text="@string/gender"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <RadioGroup
        android:id="@+id/genderSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:layout_marginBottom="20px"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/MALE"
            android:layout_width="500px"
            android:layout_height="match_parent"
            android:buttonTint="@color/mainGreen"
            android:text="@string/male"
            android:textSize="70px"
            android:textColor="@android:color/black"/>
        <RadioButton
            android:id="@+id/FEMALE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/mainGreen"
            android:text="@string/female"
            android:textSize="70px"
            android:textColor="@android:color/black"/>
    </RadioGroup>
    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/old_pass"
        android:textColorHint="@color/mainGreen"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:layout_marginBottom="20px"
        android:background="@drawable/edit_text_border"/>
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/new_password"
        android:textColorHint="@color/mainGreen"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:layout_marginBottom="20px"
        android:background="@drawable/edit_text_border"/>
    <EditText
        android:id="@+id/passwordRepeatInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/new_password_repeat"
        android:textColorHint="@color/mainGreen"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:layout_marginBottom="20px"
        android:background="@drawable/edit_text_border"/>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:textSize="55px"
        android:background="@color/mainGreen"
        android:layout_height="100px"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/save"
        android:layout_marginRight="150px"
        android:layout_marginLeft="150px"
        android:layout_marginTop="50px"
        android:layout_marginBottom="50px"/>

</LinearLayout>