<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">
    <ImageView android:id="@+id/goBack"
        android:layout_width="130px"
        android:layout_height="130px"
        android:src="@drawable/arrow"
        android:layout_marginTop="30px"
        android:layout_marginLeft="40px"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/testName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100px"
        android:text="@string/testResults"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/testResultChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingTop="50px"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/descriptionTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/typesDescription"
                android:textSize="50px"
                android:gravity="center"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"

                android:textColor="@color/mainGreen"/>

            <TextView
                android:id="@+id/demonstrative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/demonstrative"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delimiter"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>

            <TextView
                android:id="@+id/stuck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/stuck"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delimiter"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>

            <TextView
                android:id="@+id/pedantic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/pedantic"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delimiter"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>

            <TextView
                android:id="@+id/excitable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/excitable"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delimiter"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>
            <TextView
                android:id="@+id/hyperthymic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/hyperthymic"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delimiter"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>

            <TextView
                android:id="@+id/disthymic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/disthymic"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delimiter"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>
            <TextView
                android:id="@+id/anxiouslyFearFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/anxiouslyFearFull"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:layout_gravity="center"
                android:textColor="@color/mainGreen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delimiter"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>
            <TextView
                android:id="@+id/emotionally"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/emotionally"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delimiter"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>

            <TextView
                android:id="@+id/emotive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/emotive"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delimiter"
                android:textSize="50px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:textColor="@color/mainGreen"/>

            <TextView
                android:id="@+id/cyclothymic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/cyclothymic"
                android:textSize="50px"

                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"

                android:textColor="@color/mainGreen"
                android:layout_marginBottom="40px"
                android:paddingBottom="900px"/>
        </LinearLayout>


    </ScrollView>

</LinearLayout>