<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">
    <ImageView android:id="@+id/goBack"
        android:layout_width="70px"
        android:layout_height="70px"
        android:src="@drawable/arrow"
        android:layout_marginTop="30px"
        android:layout_marginLeft="40px"
        android:layout_gravity="left"/>
    <TextView
        android:id="@+id/testName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:textSize="100px"
        android:text="@string/reset_password"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="100px"
        android:layout_weight="1"
        android:text="@string/email_forgot_pass"
        android:layout_marginTop="30px"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@color/mainGreen"/>
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textEmailAddress"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:layout_marginBottom="450px"
        android:hint="@string/email"
        android:textColorHint="@color/selectedYelow"
        android:background="@drawable/edit_text_border"/>

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="match_parent"
        android:textSize="55px"
        android:background="@color/mainGreen"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/send"
        android:layout_marginRight="150px"
        android:layout_marginLeft="150px"
        android:layout_marginBottom="50px"/>

</LinearLayout>